Simplify scroll overflow logic and fix bugs with it.

--- a/premium/web-frontend/modules/baserow_premium/assets/scss/components/user_admin.scss
+++ b/premium/web-frontend/modules/baserow_premium/assets/scss/components/user_admin.scss
@@ -73,6 +73,8 @@
 }
 
 .user-admin-group__item {
+  @extend %ellipsis;
+
   @include fixed-height(28px, 12px);
 
   flex: 0 1 auto;
